회원정보 수정에서 이메일 체크 안되던 부분 수정

--- a/src/main/resources/templates/user/authentication.html
+++ b/src/main/resources/templates/user/authentication.html
@@ -50,7 +50,7 @@
      */
     document.getElementById("resend").addEventListener('click', function () {
         const url = [[${resendLink}]];
-        checkAPI(url);
+        emailSendAPI(url);
     });
 
     /**
