--- a/src/main/resources/templates/user/userInfo.html
+++ b/src/main/resources/templates/user/userInfo.html
@@ -181,6 +181,7 @@
 
 
 <script src="/js/common/checkReg.js"></script>
+<script src="/js/common/API.js"></script>
 <!-- End custom js for this page-->
 
 </body>
