--- a/src/main/resources/templates/partials/layoutMain.html
+++ b/src/main/resources/templates/partials/layoutMain.html
@@ -7,8 +7,8 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-            <a class="navbar-brand brand-logo mr-5" href="/template/index.html"><img src="/template/images/logo.svg" class="mr-2" alt="logo"/></a>
-            <a class="navbar-brand brand-logo-mini" href="/template/index.html"><img src="/template/images/logo-mini.svg" alt="logo"/></a>
+            <a class="navbar-brand brand-logo mr-5" href="/"><img src="/template/images/logo.svg" class="mr-2" alt="logo"/></a>
+            <a class="navbar-brand brand-logo-mini" href="/"><img src="/template/images/logo-mini.svg" alt="logo"/></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
             <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -116,24 +116,24 @@
     <!-- partial -->
     <div class="container-fluid page-body-wrapper">
         <!-- partial:partials/_settings-panel.html -->
-        <div class="theme-setting-wrapper">
-            <div id="settings-trigger"><i class="ti-settings"></i></div>
-            <div id="theme-settings" class="settings-panel">
-                <i class="settings-close ti-close"></i>
-                <p class="settings-heading">SIDEBAR SKINS</p>
-                <div class="sidebar-bg-options selected" id="sidebar-light-theme"><div class="img-ss rounded-circle bg-light border mr-3"></div>Light</div>
-                <div class="sidebar-bg-options" id="sidebar-dark-theme"><div class="img-ss rounded-circle bg-dark border mr-3"></div>Dark</div>
-                <p class="settings-heading mt-2">HEADER SKINS</p>
-                <div class="color-tiles mx-0 px-4">
-                    <div class="tiles success"></div>
-                    <div class="tiles warning"></div>
-                    <div class="tiles danger"></div>
-                    <div class="tiles info"></div>
-                    <div class="tiles dark"></div>
-                    <div class="tiles default"></div>
-                </div>
-            </div>
-        </div>
+<!--        <div class="theme-setting-wrapper">-->
+<!--            <div id="settings-trigger"><i class="ti-settings"></i></div>-->
+<!--            <div id="theme-settings" class="settings-panel">-->
+<!--                <i class="settings-close ti-close"></i>-->
+<!--                <p class="settings-heading">SIDEBAR SKINS</p>-->
+<!--                <div class="sidebar-bg-options selected" id="sidebar-light-theme"><div class="img-ss rounded-circle bg-light border mr-3"></div>Light</div>-->
+<!--                <div class="sidebar-bg-options" id="sidebar-dark-theme"><div class="img-ss rounded-circle bg-dark border mr-3"></div>Dark</div>-->
+<!--                <p class="settings-heading mt-2">HEADER SKINS</p>-->
+<!--                <div class="color-tiles mx-0 px-4">-->
+<!--                    <div class="tiles success"></div>-->
+<!--                    <div class="tiles warning"></div>-->
+<!--                    <div class="tiles danger"></div>-->
+<!--                    <div class="tiles info"></div>-->
+<!--                    <div class="tiles dark"></div>-->
+<!--                    <div class="tiles default"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         <div id="right-sidebar" class="settings-panel">
             <i class="settings-close ti-close"></i>
             <ul class="nav nav-tabs border-top" id="setting-panel" role="tablist">
@@ -289,7 +289,7 @@
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/template/index.html">
+                    <a class="nav-link" href="/">
                         <i class="icon-grid menu-icon"></i>
                         <span class="menu-title">1</span>
                     </a>
